--- a/StudyNotes/Re-Study-iOS/Business/Business/Audio/Music/Detail/Controller/DetailViewController.storyboard
+++ b/StudyNotes/Re-Study-iOS/Business/Business/Audio/Music/Detail/Controller/DetailViewController.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="90P-R3-Ng2">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="90P-R3-Ng2">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="Yh1-pW-GWE">
@@ -25,27 +25,27 @@
                                 <items/>
                             </toolbar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWI-x2-RC6">
-                                <rect key="frame" x="0.0" y="20" width="375" height="100"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="anb-E8-N7w">
-                                        <rect key="frame" x="166.5" y="30" width="42" height="21"/>
+                                        <rect key="frame" x="166.5" y="40" width="42" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4a6-I5-VCb">
-                                        <rect key="frame" x="322" y="30" width="45" height="45"/>
+                                        <rect key="frame" x="322" y="40" width="45" height="45"/>
                                         <state key="normal" image="main_tab_more"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XZK-SJ-Kua">
-                                        <rect key="frame" x="8" y="30" width="40" height="40"/>
+                                        <rect key="frame" x="8" y="40" width="40" height="40"/>
                                         <state key="normal" image="miniplayer_btn_playlist_close"/>
                                         <connections>
                                             <action selector="close" destination="1vt-lu-PXv" eventType="touchUpInside" id="Mhm-NU-2Nc"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bwy-Jk-tI8">
-                                        <rect key="frame" x="171" y="59" width="33" height="16"/>
+                                        <rect key="frame" x="171" y="69" width="33" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -53,7 +53,7 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="anb-E8-N7w" firstAttribute="top" secondItem="aWI-x2-RC6" secondAttribute="top" constant="30" id="6Gd-BF-flZ"/>
+                                    <constraint firstItem="anb-E8-N7w" firstAttribute="top" secondItem="aWI-x2-RC6" secondAttribute="top" constant="40" id="6Gd-BF-flZ"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="713-67-Owg"/>
                                     <constraint firstAttribute="height" constant="100" id="Fpm-Jf-UbA"/>
                                     <constraint firstItem="XZK-SJ-Kua" firstAttribute="top" secondItem="anb-E8-N7w" secondAttribute="top" id="OR9-1B-P5F"/>
@@ -156,22 +156,22 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Avp-AF-Atr">
-                                <rect key="frame" x="0.0" y="120" width="375" height="419"/>
+                                <rect key="frame" x="0.0" y="100" width="375" height="439"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IFI-ur-2RU">
-                                        <rect key="frame" x="20" y="32" width="335" height="335"/>
+                                        <rect key="frame" x="56" y="63" width="263" height="263"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="IFI-ur-2RU" secondAttribute="height" multiplier="1:1" id="4jM-pm-8eB"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcJ-Mz-rgA">
-                                        <rect key="frame" x="166.5" y="375" width="42" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcJ-Mz-rgA" customClass="LrcLabel" customModule="Business" customModuleProvider="target">
+                                        <rect key="frame" x="166.5" y="341" width="42" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R8f-Zt-hqY">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="419"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="439"/>
                                     </scrollView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -179,11 +179,11 @@
                                     <constraint firstItem="R8f-Zt-hqY" firstAttribute="leading" secondItem="Avp-AF-Atr" secondAttribute="leading" id="16J-Ec-1Pr"/>
                                     <constraint firstAttribute="trailing" secondItem="R8f-Zt-hqY" secondAttribute="trailing" id="RIu-HS-7Vv"/>
                                     <constraint firstItem="zcJ-Mz-rgA" firstAttribute="centerX" secondItem="Avp-AF-Atr" secondAttribute="centerX" id="Sej-HX-JWb"/>
-                                    <constraint firstItem="zcJ-Mz-rgA" firstAttribute="top" secondItem="IFI-ur-2RU" secondAttribute="bottom" constant="8" id="cPX-0p-khw"/>
+                                    <constraint firstItem="zcJ-Mz-rgA" firstAttribute="top" secondItem="IFI-ur-2RU" secondAttribute="bottom" constant="15" id="cPX-0p-khw"/>
                                     <constraint firstItem="IFI-ur-2RU" firstAttribute="centerX" secondItem="Avp-AF-Atr" secondAttribute="centerX" id="g2c-Sh-gIX"/>
                                     <constraint firstItem="R8f-Zt-hqY" firstAttribute="top" secondItem="Avp-AF-Atr" secondAttribute="top" id="iOY-9a-TuI"/>
-                                    <constraint firstItem="IFI-ur-2RU" firstAttribute="width" secondItem="Avp-AF-Atr" secondAttribute="height" multiplier="0.8:1" id="lS8-IQ-rPw"/>
-                                    <constraint firstItem="IFI-ur-2RU" firstAttribute="centerY" secondItem="Avp-AF-Atr" secondAttribute="centerY" constant="-10" id="mVa-nz-x90"/>
+                                    <constraint firstItem="IFI-ur-2RU" firstAttribute="width" secondItem="Avp-AF-Atr" secondAttribute="height" multiplier="0.6:1" id="lS8-IQ-rPw"/>
+                                    <constraint firstItem="IFI-ur-2RU" firstAttribute="centerY" secondItem="Avp-AF-Atr" secondAttribute="centerY" constant="-25" id="mVa-nz-x90"/>
                                     <constraint firstAttribute="bottom" secondItem="R8f-Zt-hqY" secondAttribute="bottom" id="xmr-Gc-P8l"/>
                                 </constraints>
                             </view>
@@ -205,17 +205,23 @@
                             <constraint firstItem="Avp-AF-Atr" firstAttribute="leading" secondItem="V90-ad-2Pz" secondAttribute="leading" id="u2L-Vc-mvX"/>
                             <constraint firstItem="aWI-x2-RC6" firstAttribute="leading" secondItem="V90-ad-2Pz" secondAttribute="leading" id="usT-RS-xfy"/>
                             <constraint firstItem="V90-ad-2Pz" firstAttribute="bottom" secondItem="FMk-Nk-FCg" secondAttribute="bottom" id="vNH-Vf-oql"/>
-                            <constraint firstItem="aWI-x2-RC6" firstAttribute="top" secondItem="V90-ad-2Pz" secondAttribute="top" id="xoW-5U-LMm"/>
+                            <constraint firstItem="aWI-x2-RC6" firstAttribute="top" secondItem="iaD-yy-vUZ" secondAttribute="top" id="xoW-5U-LMm"/>
                             <constraint firstItem="Yh1-pW-GWE" firstAttribute="leading" secondItem="V90-ad-2Pz" secondAttribute="leading" id="yC0-Qo-GNZ"/>
                             <constraint firstItem="FMk-Nk-FCg" firstAttribute="top" secondItem="Avp-AF-Atr" secondAttribute="bottom" id="ziV-LI-3uC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="V90-ad-2Pz"/>
                     </view>
                     <connections>
+                        <outlet property="backImageView" destination="90P-R3-Ng2" id="I4i-M3-1Sz"/>
+                        <outlet property="costTimeLabel" destination="2f3-XC-BXV" id="1W3-6I-rdp"/>
                         <outlet property="foreImageView" destination="IFI-ur-2RU" id="cXf-Tn-WSG"/>
                         <outlet property="lrcBackView" destination="R8f-Zt-hqY" id="7hQ-Kf-TzT"/>
                         <outlet property="lrcLabel" destination="zcJ-Mz-rgA" id="Cb5-of-ohe"/>
+                        <outlet property="playOrPauseButton" destination="K6J-ok-we0" id="QdD-sz-IKq"/>
                         <outlet property="progressSlider" destination="AOI-NN-XWj" id="Hgx-QB-WeD"/>
+                        <outlet property="singerNameLabel" destination="bwy-Jk-tI8" id="1G4-jN-blY"/>
+                        <outlet property="songNameLabel" destination="anb-E8-N7w" id="Tc7-e9-r9t"/>
+                        <outlet property="totalTimeLabel" destination="gJe-g9-OS3" id="b9K-HP-VY4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K3X-gF-649" userLabel="First Responder" sceneMemberID="firstResponder"/>
